force-app/main/default/objects/Territory__c/fields/Annual_Target__c.field-meta.xml
<CustomField>
    <fullName>Annual_Target__c</fullName>
    <description>Annual sales target for the territory</description>
    <label>Annual Target</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>