force-app/main/default/objects/Territory__c/fields/Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Territory_Code__c</fullName>
    <description>Unique code for the territory</description>
    <externalId>true</externalId>
    <label>Territory Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>