force-app/main/default/objects/Territory__c/fields/Territory_Manager__c.field-meta.xml
<CustomField>
    <fullName>Territory_Manager__c</fullName>
    <description>Sales manager responsible for this territory</description>
    <label>Territory Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Managed Territories</relationshipLabel>
    <relationshipName>Managed_Territories</relationshipName>
    <type>Lookup</type>
</CustomField>