force-app/main/default/objects/Territory__c/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <description>Descriptive name of the territory</description>
    <label>Territory Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>